cmake_minimum_required(VERSION 4.0)
project(c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(c__ main.cpp
        "recursion/basic recursion/factorial.cpp"
        "recursion/basic recursion/decreasingOrder.cpp"
        "linked list/popBackLL_AND_reverse.cpp"
        "linked list/LL_implementation.cpp"
        "recursion/basic recursion/function.cpp"
        "recursion/basic recursion/sumOfN_NaturalNumbers.cpp"
        "arrays 2/buy and sell stocks/buy_sell_stock.cpp"
        "recursion/basic recursion/fibonacciRucursive.cpp"
        "recursion/basic recursion/fibonacciRucursive.h"
        recursion/array/sortedArray.cpp
        recursion/vector/firstOccurence.cpp
        recursion/vector/lastOccurence.cpp
        "recursion/power function/powerFunction.cpp"
        "recursion/recursion question/tiling.cpp"
        "recursion/recursion question/duplicateString.cpp"
        queue/queue_LL.cpp
        queue/Circular_Queue.cpp
        queue/Queue_STL.cpp
        queue/QueueUsing_Two_Stacks.cpp
        queue/Stack_using_two_queue.cpp
        "doubly ended linked list/doublyLinkedList.cpp"
        "Binary trees/preOrderBinaryTree.cpp"
        "Binary trees/preorder.cpp"
        "Binary trees/inOrder.cpp"
        "Binary trees/postOrder.cpp"
        "Binary trees/levelOrder.cpp"
        "Binary trees/heightOfBt.cpp"
        "Binary trees/countOfNode.cpp"
        "Binary trees/sumOfNodes.cpp"
        "divide and conqure/mergeSort1.cpp"
        "divide and conqure/quickSort.cpp"
        Graph/graphByAdjacencyList.cpp
        "linked list/By using STL/list_stl.cpp")
